cmake_minimum_required(VERSION 3.13.4)
project(ios_fps VERSION 1.0.0)

find_package(Geode REQUIRED)

add_geode_mod(ios_fps src/main.cpp)
cmake_minimum_required(VERSION 3.13.4)
project(ios_fps VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Geode REQUIRED)

add_geode_mod(ios_fps src/main.cpp)
